kubernetes/main/apps/default/wikijs/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikijs
  namespace: default
  labels:
    app: wikijs
spec:
  replicas: 0
  selector:
    matchLabels:
      app: wikijs
  template:
    metadata:
      labels:
        app: wikijs
    spec:
      containers:
      - name: wikijs
        image: requarks/wiki:2.5
