kubernetes/main/apps/default/wikijs/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  namespace: default
spec:
  selector:
    app: wikijs
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
