kubernetes/main/apps/default/wikijs/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wikijs-ingress
  namespace: default
  annotations:
    gethomepage.dev/description: Documentation
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Projects
    gethomepage.dev/icon: wikijs.png
    gethomepage.dev/name: WikiJS
    gethomepage.dev/pod-selector: "app=wikijs"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: ca-server-cluster-issuer
    cert-manager.io/common-name: wikijs.internal
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.0.0/16
spec:
  tls:
    - hosts:
        - wikijs.internal
      secretName: wikijs-ing-cert
  ingressClassName: nginx
  rules:
  - host: wikijs.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wikijs
            port:
              number: 3000
